--- a/index.html
+++ b/index.html
@@ -6,34 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Osama's resumes</title>
 </head>
 
 <body>
+    <header>
+        <div class="name">
+            <h1>Osama Said</h1>
+            <h2>Junior Front End Developer</h2>
+        </div>
+    </header>
     <div class="wrapper">
-        <header>
-            <div class="info">
-                <ul>
-                    <li>
-                        <span>
-                            <i class="fas fa-map-pin"></i>
-                        </span>
-                        <span>Portland, OR</span>
-                    </li>
-                    <li>
-                        <span>
-                            <i class="fas fa-envelope"></i>
-                        </span>
-                        <span>osamaasaid@gmail.com</span>
-                    </li>
-                    <li></li>
-                </ul>
-            </div>
-            <div class="name">
-                <h1>Osama Said</h1>
-            </div>
-        </header>
+        <div class="exp">
+            <h1 class="heading">Experience</h1>
+            <h3 class="sub-heading">Front End Developer/Technical Support</h3>
+            <h4>Dealerspike - Wilsonville, OR</h4>
+            <h4>March 2019 - Present</h4>
+            <ul class="job">
+                <li>Take in client requests via email and phone.</li>
+                <li>Maintain, update, and implement changes to clients website using HTML, CSS, and JavaScript (jQuery library).
+                    Site changes may include simple text edits, header redesigns, custom forms and pages, graphic updates
+                    using software such as Photoshop etc.
+                </li>
+                <li>Responsive web development</li>
+                <li>Troubleshoot / Debug platform or website issues</li>
+                <li>Act as a technical liaison to clients, leading technical discussions during implementations</li>
+                <li>Identify any client issues and work with internal teams to create a strategy to troubleshoot and resolve
+                    problem
+                </li>
+                <li>Adhere to a 24 hour turn-around standard to ensure top level support for our clients.</li>
+                <li>Worked effectively in a team setting and under minimal to no supervision</li>
+            </ul>
+
+            <h3 class="sub-heading">SECURITY SPECIALIST</h3>
+            <h4>Amazon - Seattle, WA</h4>
+            <h4>June 2016 - Feb 2019</h4>
+            <ul class="job">
+                <li>Providing general customer service to Amazonians as needed</li>
+                <li>Documenting and communicating incidents with management</li>
+                <li>Training new employees on company policies and requirements</li>
+                <li>Performed inbound and outbaund calls to handle a variety of requests</li>
+            </ul>
+
+            <h3 class="sub-heading">FREELANCE WEB DEVELOPER</h3>
+            <h4>SOM Design - Seattle, WA</h4>
+            <h4>May 2016 - Feb 2019</h4>
+            <ul class="job">
+                <li>Web Developer with accountability for marketing and selling services</li>
+                <li>Managing client relationships, controlling budgets and designing/developing websites and web applications.</li>
+            </ul>
+
+            <h3 class="sub-heading">Teaching Assistant and Mentor</h3>
+            <h4>Companion Athletics</h4>
+            <h4>May 2016 - Feb 2019</h4>
+            <ul class="job">
+                <li>Exposing young teenage students to the basic of computer science through teaching</li>
+                <li>Gave lessons in HTML and CSS.</li>
+            </ul>
+        </div>
+
     </div>
 </body>
 
